# Song-Program

./: README.md
include/: mfunctions.h  mgraphics.h  song.h
main/: main.c  songs9.txt
song_menu/: CMakeLists.txt
song_menu/include/: cvector.h
src/: mfunctions.c  mgraphics.c  song.c
